@@ -14,9 +14,7 @@
 
 	<properties>
 		<java.version>21</java.version>
-        <sonar.coverage.jacoco.xmlReportPaths>
-            target/site/jacoco/jacoco.xml
-        </sonar.coverage.jacoco.xmlReportPaths>
+        <maven.compiler.release>21</maven.compiler.release>
 	</properties>
 
 	<dependencies>
@@ -202,31 +200,31 @@
 
 	<build>
 		<plugins>
-                    <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.11</version>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.11</version>
 
-                        <executions>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
 
-                            <execution>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
 
-                            <execution>
-                                <id>report</id>
-                                <phase>test</phase>
-
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                            </execution>
-
-                        </executions>
-                    </plugin>
-
+                <configuration>
+                    <outputDirectory>${project.build.directory}/jacoco-report</outputDirectory>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.jvnet.jaxb</groupId>
@@ -265,12 +263,24 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <argLine>@{argLine} --enable-preview</argLine>
+                </configuration>
+            </plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
 				<configuration>
 					<source>21</source>
 					<target>21</target>
+                    <release>21</release>
 					<compilerArgs>
 						<arg>--enable-preview</arg>
 					</compilerArgs>
